--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <video id="preview" controls autoplay muted></video>
   <br />
   <input type="checkbox" id="record-mic" name="record-mic" />
-  <label for="record-mic">record mic</label>
+  <label for="record-mic" id="record-mic-label">record mic</label>
   <br />
   <button id="startButton" class="button">start recording 🔴</button>
   <button id="stopButton" class="button invisible">stop recording ⬛</button>
