--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>screen recorder</title>
+    <script type="module" src="./index.js" async defer></script>
+    <script type="module" src="./lib.js" async defer></script>
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎥</text></svg>"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>screen recorder</title>
-  <script src="./index.js" async defer></script>
-  <link rel="stylesheet" href="./index.css" />
-  <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎥</text></svg>" />
-</head>
-
-<body>
-  <h1>screen recorder 🎥</h1>
-  <video id="preview" controls autoplay muted></video>
-  <br />
-  <input type="checkbox" id="record-mic" name="record-mic" />
-  <label for="record-mic" id="record-mic-label">record mic</label>
-  <br />
-  <button id="startButton" class="button">start recording 🔴</button>
-  <button id="stopButton" class="button invisible">stop recording ⬛</button>
-  <br />
-  <pre id="log"></pre>
-</body>
-
+  <body>
+    <h1>screen recorder 🎥</h1>
+    <video id="preview" controls autoplay muted></video>
+    <br />
+    <input type="checkbox" id="record-mic" name="record-mic" />
+    <label for="record-mic" id="record-mic-label">record mic</label>
+    <br />
+    <button id="startButton" class="button">start recording 🔴</button>
+    <button id="stopButton" class="button invisible">stop recording ⬛</button>
+    <br />
+    <pre id="log"></pre>
+  </body>
 </html>
